--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.11.15",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
+    "@mui/styled-engine-sc": "^5.11.11",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "localforage": "^1.10.0",
@@ -24,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "recharts": "^2.5.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
